# pytia

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
docs/pytia/: cli.html  console.html  const.html  decorators.html  exceptions.html  framework.html  index.html  log.html  main.html
docs/pytia/framework/: base.html  index.html
docs/pytia/helper/: directions.html  distances.html  extremum.html  index.html  measurables.html  planes.html  points.html  references.html  scaling.html  symmetries.html  verify.html
docs/pytia/utilities/: bill_of_material.html  bounding_box.html  docket.html  index.html  material.html  mirror.html  paths.html
docs/pytia/wrapper/: axis_systems.html  index.html  material_catalogs.html  parameters.html  properties.html
pytia/: __init__.py  __main__.py  cli.py  console.py  const.py  decorators.py  exceptions.py  framework.py  log.py  main.py
pytia/framework/: README.md  __init__.py  base.py
pytia/framework/cat_mat_interfaces/: analysis_material.py  material.py  material_document.py  material_families.py  material_family.py  material_manager.py  materials.py  positioned_material.py
pytia/framework/cat_rma_interfaces/: rendering_material.py
pytia/framework/cat_types/: checking.py  document_types.py  general.py
pytia/helper/: __init__.py  directions.py  distances.py  extremum.py  measurables.py  planes.py  points.py  references.py  scaling.py  symmetries.py  verify.py
pytia/utilities/: __init__.py  bill_of_material.py  bounding_box.py  docket.py  material.py  mirror.py  paths.py
pytia/wrapper/: __init__.py  axis_systems.py  material_catalogs.py  parameters.py  properties.py
tests/: test_pytia.py
tests/assets/: Catalog.CATMaterial
tests/test_utilities/: test_bill_of_material.py  test_bounding_box.py  test_docket.py  test_material.py  test_mirror.py
tests/test_wrapper/: test_axis_systems.py  test_bodies.py  test_drawing_document.py  test_material_catalogs.py  test_parameter.py  test_part_document.py  test_properties.py
(+1004 files in other folders)
