[tool.poetry]
authors = ["Philip Delorenzo <git@deloarts.com>"]
classifiers = ["Operating System :: Microsoft :: Windows"]
description = "A wrapper for the catia v5 api."
name = "pytia"
readme = "README.md"
version = "0.4.1"

[tool.poetry.dependencies]
click = "8.1.7"
colorama = "0.4.6"
psutil = "6.1.0"
pycatia = "0.8.0"
python = "^3.13"
pywin32 = "308"

[tool.poetry.dev-dependencies]
black = "24.8.0"
coverage = "^7.6.8"
pdoc3 = "^0.11.3"
pre-commit = "^4.0.1"
pylint = "^3.3.1"
pytest = "^8.3.3"
setuptools = "^75.6.0"
validators = "^0.34.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.9.1"]
